deploy/kubernetes/ingress/argo-cd.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
#    kubernetes.io/ingress.class: "traefik"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/clusterissuer: "nip-issuer"
#    ingress.kubernetes.io/force-ssl-redirect: "true"
#   ingress.kubernetes.io/ssl-passthrough: "true"
#    ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - argocd.91.185.86.78.sslip.io
    secretName: argocd-tls
  rules:
   - host: argocd.91.185.86.78.sslip.io
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
              service:
                name: argocd-server
                port: 
                   number: 80
#        pathType: Prefix
#        backend:
#          service:
#            name: argocd-server
#            port: 
#              name: http
#              number: 443
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: argocd-server
#  namespace: argocd
#spec:
#  entryPoints:
#    - websecure
#  routes:
#    - kind: Rule
#      match: Host('argocd.argocd.91.185.86.78.sslip.io')
#      priority: 10
#      services:
#        - name: argocd-server
#          port: 80
#    - kind: Rule
#      match: Host('argocd.91.185.86.78.sslip.io') && Headers(`Content-Type`, `application/grpc`)
#      priority: 11
#      services:
#        - name: argocd-server
#          port: 80
#          scheme: h2c
#  tls: {}
