deploy/kubernetes/ingress/grafana.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
#    kubernetes.io/ingress.class: "traefik"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/clusterissuer: "nip-issuer"
spec:
  tls:
  - hosts:
    - grafana.91.185.86.78.sslip.io
    secretName: grafana-tls
  rules:
   - host: grafana.91.185.86.78.sslip.io
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port: 
              number: 80
