deploy/kubernetes/ingress/prom_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - host: prometheus.91.185.86.78.nip.io
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port: 
              number: 80
